Bug 416255 - Discover lists as installed addons already uninstalled via system settings
Summary: Discover lists as installed addons already uninstalled via system settings
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
: 176033 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-14 16:25 UTC by Patrick Silva
Modified: 2020-09-16 11:16 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-14 16:25:09 UTC
1. use Discover to install a color scheme
2. close Discover
3. uninstall the just installed color scheme via system settings > colors
4. reopen Discover and search for the color scheme installed in the step 1

OBSERVED RESULT
Discover lists the already uninstalled color scheme as installed (we see "Remove"
button instead of "Install").

EXPECTED RESULT
Discover lists correctly things uninstalled via system settings.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.17.80
KDE Frameworks Version: 5.67.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
This issue also affects the following Plasma addons:
plasma style
cursor theme 
icon theme
SDDM theme
Comment 1 Alexander Lohnau 2020-08-27 19:56:05 UTC
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/229 will fix the cursor theme and some others, icons has already been fixed and SDDM theme is not that trivial.

And plasma styles is fixed by a related bugfix (https://invent.kde.org/frameworks/knewstuff/-/merge_requests/25).
Comment 2 Bug Janitor Service 2020-08-27 20:29:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/sddm-kcm/-/merge_requests/1
Comment 3 Alexander Lohnau 2020-08-28 16:13:28 UTC
Git commit e47246e24a9c7ddcdd87c2f1640ba0d07e254b4b by Alexander Lohnau.
Committed on 27/08/2020 at 21:12.
Pushed by ngraham into branch 'master'.

RemoveDeadEntries option, cleanup files and config
FIXED-IN: 5.20

Without deleting the file KNS could not tell if we have the entry manually uninstalled.
Also the config entry gets removed once the uninstallation is successful.

M  +1    -0    sddmtheme.knsrc
M  +5    -1    sddmthemeinstaller.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/e47246e24a9c7ddcdd87c2f1640ba0d07e254b4b
Comment 4 Nate Graham 2020-08-28 16:18:08 UTC
Git commit 76d056dc87ee876eb2a67821bff591f2b3c26cea by Nate Graham, on behalf of Alexander Lohnau.
Committed on 28/08/2020 at 16:17.
Pushed by ngraham into branch 'master'.

Enable RemoveDeadEntries option for KNS

M  +1    -0    kcms/colors/colorschemes.knsrc
M  +1    -0    kcms/cursortheme/xcursor/xcursor.knsrc
M  +1    -0    kcms/style/gtk_themes.knsrc

https://invent.kde.org/plasma/plasma-workspace/commit/76d056dc87ee876eb2a67821bff591f2b3c26cea
Comment 5 Alexander Lohnau 2020-09-16 11:16:29 UTC
*** Bug 176033 has been marked as a duplicate of this bug. ***