RemoveDeadEntries option, cleanup files and config

BUG: 416255
FIXED-IN: 5.20

Without deleting the file KNS could not tell if we have the entry manually uninstalled.
Also the config entry gets removed once the uninstallation is successful.